5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1863_1292.log
== TEST (2019-07-02 10:14:42) 
-- CODE:
from numpy import*
from numpy.linalg*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(v[0],0))
print("esmeralda:",round(v[1],0))
print("safira:",round(v[2],0))
if(v[0]==max(v)):
	print(ametista)
elif(v[1]==max(v)):
	print(esmeralda)
else:
	print(safira)


-- ERROR:
File "XXXX", line 2
    from numpy.linalg*
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(v[0],0))
print("esmeralda:",round(v[1],0))
print("safira:",round(v[2],0))
if(v[0]==max(v)):
	print(ametista)
elif(v[1]==max(v)):
	print(esmeralda)
else:
	print(safira)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(v[0],0))
print("esmeralda:",round(v[1],0))
print("safira:",round(v[2],0))
if(v[0]==max(v)):
	print("ametista")
elif(v[1]==max(v)):
	print("esmeralda")
else:
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
else:
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:17:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
else:
	print("safira")


-- EXECUTION TIME:
0.912442
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
safira
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
safira
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
else:
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
else:
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
elif(q[2]==max(v):
	print("safira")


-- ERROR:
File "XXXX", line 14
    elif(q[2]==max(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))
if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
elif(q[2]==max(v)):
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))

if(q[0]==max(v)):
	print("ametista")
elif(q[1]==max(v)):
	print("esmeralda")
elif(q[2]==max(v)):
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))

	if(q[0]==max(v)):
		print("ametista")
	elif(q[1]==max(v)):
		print("esmeralda")
	elif(q[2]==max(v)):
		print("safira")


-- ERROR:
File "XXXX", line 11
    if(q[0]==max(v)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))

if(q[0]==max(q)):
	print("ametista")
elif(q[1]==max(q)):
	print("esmeralda")
else:
	print("safira")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:24:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array([[8,3,1],[5,12,10],[1,3,2]])
v=array(eval(input("digite: ")))
v=v.T
q=dot(inv(mat),v.T)
print("ametista:",round(q[0],0))
print("esmeralda:",round(q[1],0))
print("safira:",round(q[2],0))

if(q[0]==max(q)):
	print("ametista")
elif(q[1]==max(q)):
	print("esmeralda")
else:
	print("safira")


-- EXECUTION TIME:
1.08971
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
